crates/hir-ty/tests/snapshots/jls_constructors__constructor_poly_stream_map_method_ref.snap
---
source: crates/hir-ty/tests/jls_constructors.rs
expression: out
---
FILE /src/com/example/Constr.java:
package com.example;

import java.util.List;

record R(List<P> libs) {}

class P {
    static P of(String first, String... more) { return null; }
    static P of(Object any) { return null; }
}

class Body {
    void m(List<String> names) {
        new R(names.stream().map(P::of).toList());
    }
}

method of(java.lang.String, java.lang.String): com.example.P
  locals: l0: java.lang.String | l1: java.lang.String[]
  exprs: e0: null
method of(java.lang.Object): com.example.P
  locals: l2: java.lang.Object
  exprs: e1: null
method m(java.util.List<java.lang.String>): void
  locals: l3: java.util.List<java.lang.String>
  exprs: e3: java.util.function.Function<? super java.lang.String, ? extends com.example.P> | e4: java.util.List<java.lang.String> | e5: java.util.stream.Stream<java.lang.String> | e6: java.util.stream.Stream<com.example.P> | e7: java.util.List<com.example.P> | e8: com.example.R
