crates/hir-ty/tests/snapshots/jls_constructors__new_argument_mismatch.snap
---
source: crates/hir-ty/tests/jls_constructors.rs
expression: out
---
FILE /src/com/example/Constr.java:
package com.example;

class Foo {
    Foo(int x) {}
}

class Body {
    void m() {
        new Foo("s");
        new Foo(1, 2);
    }
}

method Foo(int): <init>
  locals: l0: int
  exprs: 
method m(): void
  locals: 
  exprs: e0: java.lang.String | e1: com.example.Foo | e2: int | e3: int | e4: com.example.Foo
  diags: e1@8:16: wrong-argument-count: Constructor 'Foo()' cannot be applied to given types | e4@9:16: wrong-argument-count: Constructor 'Foo()' cannot be applied to given types
