crates/hir-ty/tests/snapshots/jls_constructors__new_wrong_arity.snap
---
source: crates/hir-ty/tests/jls_constructors.rs
assertion_line: 19
expression: out
---
FILE /src/com/example/Constr.java:
package com.example;

class Foo {
    Foo(int x) {}
}

class Body {
    void m() {
        new Foo();
        new Foo(1);
    }
}

method Foo(int): <init>
  locals: l0: int
  exprs: 
method m(): void
  locals: 
  exprs: e0: com.example.Foo | e1: int | e2: com.example.Foo
  diags: e0@8:8: wrong-argument-count: constructor Foo() cannot be applied to given types;
  required: int
  found: 
  reason: actual and formal argument lists differ in length
