crates/hir-ty/tests/snapshots/jls_constructors__record_constructor.snap
---
source: crates/hir-ty/tests/jls_constructors.rs
assertion_line: 91
expression: out
---
FILE /src/com/example/Constr.java:
package com.example;

record Rec(int x) {}

class Body {
    void m() {
        new Rec(1);
        new Rec("s");
    }
}

method m(): void
  locals: 
  exprs: e0: int | e1: com.example.Rec | e2: java.lang.String | e3: com.example.Rec
  diags: e3@7:8: wrong-argument-count: constructor Rec() cannot be applied to given types;
  required: int
  found: String
  reason: incompatible types: String cannot be converted to int
