crates/hir-ty/tests/snapshots/jls_constructors__this_delegation.snap
---
source: crates/hir-ty/tests/jls_constructors.rs
expression: out
---
FILE /src/com/example/Constr.java:
package com.example;

class Foo {
    Foo(int x) {}

    Foo() {
        this("s");
    }
}

method Foo(int): <init>
  locals: l0: int
  exprs: 
method Foo(): <init>
  locals: 
  exprs: e0: java.lang.String | e1: void
  diags: e1@6:8: wrong-argument-count: Constructor 'Foo()' cannot be applied to given types
